--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,4 @@
-@import 'null.scss';
+@import '_null';
 
 /*---------------------------------------------------------------------------------------------------------------------------------------------------*/
 
