--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,7 @@ body {
 /*----------------------------------------------------------------------------------------------------------------------------------------------------*/
 .button {
   display: inline-block;
+  white-space: nowrap;
   min-width: 127px;
   font-size: 14px;
   line-height: 21px;
@@ -102,11 +103,10 @@ body {
   padding: 9px 36px;
   border-radius: 30px;
   text-align: center;
+  transition: all 0.3s ease 0s;
 }
 .button:hover {
-  background: linear-gradient(265.37deg, #9224D6 -49.74%, #BD87DE 116.53%);
-  border: none;
-  padding: 10px 37px;
+  background-color: #9f37e0;
 }
 
 /*-------------------------------------------------------------------------------------------------------------------*/
@@ -120,12 +120,10 @@ body {
 /*----------------------------------------------------------------------------------------------------------------------------------------------*/
 .header {
   width: 100%;
-  position: fixed;
+  position: absolute;
   left: 0;
   top: 0;
   z-index: 50;
-  transition: all 0.5s ease;
-  background-color: rgba(128, 0, 128, 0.1);
 }
 .header__container {
   display: flex;
@@ -167,6 +165,7 @@ body {
 }
 .menu__link:hover {
   text-decoration: underline;
+  transition: all 0.3s ease 0s;
   color: #d295f8;
 }
 
@@ -422,6 +421,7 @@ body {
   letter-spacing: 0.05em;
   color: #9224D6;
   margin: 0px 0px -40px 0px;
+  transition: all 0.3s ease 0s;
 }
 .episodes__title-button:hover {
   text-decoration: underline;
@@ -485,6 +485,7 @@ body {
   font-weight: 500;
   letter-spacing: 0.02em;
   color: #9224D6;
+  transition: all 0.3s ease 0s;
 }
 .item-play__text:hover {
   text-decoration: underline;
@@ -629,9 +630,10 @@ body {
   padding: 10px 27px;
   border: 1px solid #1C1B1E;
   border-radius: 40px;
+  transition: all 0.3s ease 0s;
 }
 .about__button:hover {
-  padding: 11px 28px;
+  color: #fff;
 }
 
 @media (max-width: 1200.98px) {
@@ -759,6 +761,7 @@ body {
   letter-spacing: 0.05em;
   color: #9224D6;
   margin: 0px 0px -40px 0px;
+  transition: all 0.3s ease 0s;
 }
 .topics__title-button:hover {
   text-decoration: underline;
@@ -786,6 +789,7 @@ body {
   letter-spacing: 0.05em;
   margin: 0px 0px 8px 0px;
   color: #000000;
+  transition: all 0.3s ease 0s;
 }
 .topics__item-title:hover {
   text-decoration: underline;
@@ -862,7 +866,6 @@ body {
   padding: 12px 200px 12px 25px;
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 5px;
-  margin: 0px 0px 15px 0px;
 }
 .forms__button {
   padding: 12px 40px 14px;
@@ -873,10 +876,8 @@ body {
   color: #FFFFFF;
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 5px;
-}
-.forms__button:hover {
-  background: linear-gradient(265.37deg, #9224D6 -49.74%, #BD87DE 116.53%);
-  border-radius: 5px;
+  transition: all 0.3s ease 0s;
+  max-height: 46px;
 }
 
 @media (max-width: 767.98px) {
@@ -888,6 +889,7 @@ body {
   }
   .forms__input {
     width: 100%;
+    margin-bottom: 15px;
   }
 }
 @media (max-width: 500.98px) {
